--- a/index.html
+++ b/index.html
@@ -11,14 +11,76 @@
 
     <header class="main-header">
 
-    </header>
       <h1>The Code Review</h1>
+      <h2>Signup for our newsletter</h2>
+      <p>Get the latest news on how your code is doing right in your inbox</p>
+
+    </header>
+
     <main>
+
+      <form action="index.html" method="post">
+
+        <fieldset>
+
+          <legend>Contact Information</legend>
+
+          <label for="fullname">Full Name</label>
+          <input type="text" id="fullname" name="user_fullname" placeholder="Required" required>
+
+          <label for="email">Email Address</label>
+          <input type="email" id="email" name="user_email" placeholder="Required" required>
+
+          <label for="phone">Phone Number</label>
+          <input type="tel" id="phone" name="user_phone">
+
+          <label for="address">Street Address</label>
+          <input type="text" id="address" name="user_address">
+
+          <label for="city">City</label>
+          <input type="text" id="city" name="user_city">
+
+          <label for="state">State</label>
+          <select id="state" name="user_state">
+            <option value="CT">Connecticut</option>
+            <option value="MA">Massachusetts</option>
+            <option value="ME">Main</option>
+            <option value="NH">New Hampshire</option>
+            <option value="RI">Rhode Island</option>
+            <option value="VT">Vermont</option>
+          </select>
+
+          <label for="zipcode">Zip Code</label>
+          <input type="text" id="zipcode" name="user_zipcode">
+
+        </fieldset>
+
+        <fieldset>
+
+          <legend>Newsletter</legend>
+
+          <label>Select the newsletters you would like to to receive</label>
+          <input type="checkbox" id="html" value="newsletter_html" name="user_newsletter"><label for="html">HTML News</label>
+          <input type="checkbox" id="css" value="newsletter_css" name="user_newsletter"><label for="css">CSS News</label>
+          <input type="checkbox" id="javascript" value="newsletter_javascript" name="user_newsletter"><label for="javascript">Javascript News</label><br>
+
+          <label>Newsletter format</label>
+          <input type="radio" id="format_html" value="format_html" name="user_format"><label for="format_html">HTML</label>
+          <input type="radio" id="format_css" value="format_css" name="user_format"><label for="format_css">Plain text</label><br>
+
+          <label for="topics">Other topics you'd like to hear about</label>
+          <textarea id="topics" name="user_topics"></textarea>
+
+        </fieldset>
+
+        <button type="submit">Sign Up</button>
+
+      </form>
 
     </main>
 
     <footer class="main-footer">
-
+      <p>Copyright The Code Review</p>
     </footer>
 
   </body>
