--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
     <header class="main-header">
 
       <h1>The Code Review</h1>
-      <h2>Signup for our newsletter</h2>
-      <p>Get the latest news on how your code is doing right in your inbox</p>
+      <div class="wrapper description">
+        <h2>Signup for our newsletter</h2>
+        <p>Get the latest news on how your code is doing right in your inbox</p>
+      </div>
 
     </header>
 
-    <main>
+    <main class="wrapper">
 
       <form action="index.html" method="post">
 
-        <fieldset>
+        <fieldset class="contact">
 
           <legend>Contact Information</legend>
 
@@ -32,7 +34,7 @@
           <input type="email" id="email" name="user_email" placeholder="Required" required>
 
           <label for="phone">Phone Number</label>
-          <input type="tel" id="phone" name="user_phone">
+          <input type="tel" id="phone" name="user_phone" placeholder="(999) 999-9999">
 
           <label for="address">Street Address</label>
           <input type="text" id="address" name="user_address">
@@ -42,31 +44,33 @@
 
           <label for="state">State</label>
           <select id="state" name="user_state">
+            <option value="" disabled selected>Choose State</option>
             <option value="CT">Connecticut</option>
+            <option value="ME">Maine</option>
             <option value="MA">Massachusetts</option>
-            <option value="ME">Main</option>
             <option value="NH">New Hampshire</option>
             <option value="RI">Rhode Island</option>
             <option value="VT">Vermont</option>
           </select>
 
           <label for="zipcode">Zip Code</label>
-          <input type="text" id="zipcode" name="user_zipcode">
+          <input type="text" id="zipcode" name="user_zipcode" placeholder="99999-9999">
 
         </fieldset>
 
-        <fieldset>
+        <fieldset class="newsletter">
 
           <legend>Newsletter</legend>
 
-          <label>Select the newsletters you would like to to receive</label>
-          <input type="checkbox" id="html" value="newsletter_html" name="user_newsletter"><label for="html">HTML News</label>
-          <input type="checkbox" id="css" value="newsletter_css" name="user_newsletter"><label for="css">CSS News</label>
-          <input type="checkbox" id="javascript" value="newsletter_javascript" name="user_newsletter"><label for="javascript">Javascript News</label><br>
+          <p>Select the newsletters you would like to to receive</p>
 
-          <label>Newsletter format</label>
-          <input type="radio" id="format_html" value="format_html" name="user_format"><label for="format_html">HTML</label>
-          <input type="radio" id="format_css" value="format_css" name="user_format"><label for="format_css">Plain text</label><br>
+          <p><input type="checkbox" id="html" value="newsletter_html" name="user_newsletter"><label for="html">HTML News</label></p>
+          <p><input type="checkbox" id="css" value="newsletter_css" name="user_newsletter"><label for="css">CSS News</label></p>
+          <p><input type="checkbox" id="javascript" value="newsletter_javascript" name="user_newsletter"><label for="javascript">Javascript News</label></p>
+
+          <p>Newsletter format</p>
+          <p><input type="radio" id="format_html" value="format_html" name="user_format"><label for="format_html">HTML</label></p>
+          <p><input type="radio" id="format_css" value="format_css" name="user_format"><label for="format_css">Plain text</label></p>
 
           <label for="topics">Other topics you'd like to hear about</label>
           <textarea id="topics" name="user_topics"></textarea>
@@ -80,7 +84,7 @@
     </main>
 
     <footer class="main-footer">
-      <p>Copyright The Code Review</p>
+      Copyright The Code Review
     </footer>
 
   </body>
